# RCSim

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README_RUNNING.md  Rubik's Cube Simulator Requirements.md  debug_test.py  demo.py  detailed_debug.py  docker-compose.yml  graphics_demo.py  main.py  orientation_debug.py  position_debug.py  pyproject.toml  rcsim.code-workspace  requirements-dev.txt  requirements.txt  run_software_graphics.py  run_tests.py  single_piece_debug.py  test_cube_manual.py  test_graphics_headless.py  test_graphics_import.py  test_interactive.py  test_solvers.py  undo_debug.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: algorithm_request.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  maintenance.yml  release.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
scripts/: build-release.sh  run-tests.sh  setup-dev.sh  sync-repo.sh
src/rcsim/: __init__.py
src/rcsim/cube/: __init__.py  cube.py  moves.py  state.py
src/rcsim/graphics/: __init__.py  camera.py  renderer.py  scene.py  software_renderer.py  window.py
src/rcsim/solvers/: __init__.py  algorithms.py  base.py  cfop.py  layer_by_layer.py
src/rcsim/web/: __init__.py  server.py
src/rcsim/web/static/: index.html
src/rcsim/web/static/css/: styles.css
src/rcsim/web/static/js/: api-client.js  cube-controller.js  cube-renderer.js  main.js  solver-ui.js
tests/: conftest.py
tests/integration/: test_solving.py
tests/performance/: test_benchmarks.py
tests/unit/: test_cube.py  test_moves.py
